Add Florida, Netherlands, and update UK

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
 	                </div>
                 </div>
 
+                <div id="fl" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/fl.png)">Florida</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_fl_autogen.msi">Florida Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Florida 2.0 & MegaSceneryEarth Florida 4X. 453mb.</div>
+                    </div>
+                </div>
 
                 <div id="nj" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/nj.png)">New Jersey</div>
@@ -156,23 +163,35 @@
 
                 <hr/>
 
+	            <div id="nl" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/nl.png)">Netherlands</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_netherlands_autogen.msi">Netherlands Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Netherlands. 53mb.</div>
+                    </div>
+                </div>
+
 	            <div id="uk" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/england.png)">United Kingdom</div>
                     <div class="areaDownload">
-                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_englandsoutheast_autogen.msi">South Eastern England Autogen Supplement - July, 2016</a>
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_englandsoutheast_autogen.msi">South Eastern England Autogen Supplement - July, 2016</a>
                         <div class="areaDownloadSubTitle">for JustFlight Real Scenery Vol 1 (SE England). 34mb.</div>
                     </div>
                     <div class="areaDownload">
-                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_englandcentral_autogen.msi">Central and South England Autogen Supplement - July, 2016</a>
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_englandcentral_autogen.msi">Central and South England Autogen Supplement - July, 2016</a>
                         <div class="areaDownloadSubTitle">for JustFlight Real Scenery Vol 2 (C & S England). 53mb.</div>
 	                </div>                    
                     <div class="areaDownload">
-                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_englandsouthwest_autogen.msi">Wales and South Western England Autogen Supplement - July, 2016</a>
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_englandsouthwest_autogen.msi">Wales and South Western England Autogen Supplement - July, 2016</a>
                         <div class="areaDownloadSubTitle">for JustFlight Real Scenery Vol 3 (Wales & SW England). 43mb.</div>
 	                </div>
                     <div class="areaDownload">
-                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_englandnorth_autogen.msi">Northern England Autogen Supplement - July, 2016</a>
-                        <div class="areaDownloadSubTitle">for JustFlight Real Scenery Vol 4 (Northern England). 37mb</div>
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_englandnorth_autogen.msi">Northern England Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for JustFlight Real Scenery Vol 4 (Northern England). 37mb.</div>
+	                </div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_englandwales_autogen.msi">England and Wales Complete Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth England and Wales. 129mb.</div>
 	                </div>
                 </div>
             </div>
