Added italy, switzerland, ga, sc, nc, pa

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div id="infoArea">
 
     	                <h4 class="tagline">latest updates</h4>
-                        <a class="twitter-timeline" data-chrome="noheader nofooter noborders" data-width="420" data-theme="light" href="https://twitter.com/freshscenery">Recent Updates / @freshscenery</a>
+                        <a class="twitter-timeline"  data-tweet-limit="2" data-chrome="noheader nofooter noborders" data-width="420" data-theme="light" href="https://twitter.com/freshscenery">Recent Updates / @freshscenery</a>
                     </div>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -97,14 +97,6 @@
 	                </div>
                 </div>
 
-                <div id="de" class="selectableArea">
-                    <div class="areaTitle" style="background-image: url(resources/de.png)">Delaware</div>
-                    <div class="areaDownload">
-                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_de_autogen.msi">Delaware Autogen Supplement - July, 2016</a>
-                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Delaware 2.0 & MegaSceneryEarth Delaware 4X. 25mb.</div>
-                    </div>
-                </div>
-
 	            <div id="ca" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/ca.png)">California</div>
                     <div class="areaDownload">
@@ -125,11 +117,27 @@
 	                </div>
                 </div>
 
+                <div id="de" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/de.png)">Delaware</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10720/fs_de_autogen.msi">Delaware Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Delaware 2.0 & MegaSceneryEarth Delaware 4X. 25mb.</div>
+                    </div>
+                </div>
+
                 <div id="fl" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/fl.png)">Florida</div>
                     <div class="areaDownload">
                         <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_fl_autogen.msi">Florida Autogen Supplement - July, 2016</a>
                         <div class="areaDownloadSubTitle">for MegaSceneryEarth Florida 2.0 & MegaSceneryEarth Florida 4X. 453mb.</div>
+                    </div>
+                </div>
+
+                <div id="nc" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/ga.png)">Georgia</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_ga_autogen.msi">Georgia Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Georgia 2.0. 748mb.</div>
                     </div>
                 </div>
 
@@ -141,6 +149,14 @@
                     </div>
                 </div>
 
+                <div id="nc" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/nc.png)">North Carolina</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_nc_autogen.msi">North Carolina Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth North Carolina 2.0. 635mb.</div>
+                    </div>
+                </div>
+
 	            <div id="or" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/or.png)">Oregon</div>
                     <div class="areaDownload">
@@ -148,6 +164,23 @@
                         <div class="areaDownloadSubTitle">for MegaSceneryEarth Oregon 2.0. 766mb.</div>
                     </div>
                 </div>
+
+                <div id="nc" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/pa.png)">Pennsylvania</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_pa_autogen.msi">Pennsylvania Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Pennsylvania 2.0. 455mb.</div>
+                    </div>
+                </div>
+
+                <div id="sc" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/sc.png)">South Carolina</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_sc_autogen.msi">South Carolina Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth South Carolina 2.0. 420mb.</div>
+                    </div>
+                </div>
+                
 
                 <div id="wa" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/wa.png)">Washington</div>
@@ -163,11 +196,27 @@
 
                 <hr/>
 
+	            <div id="it" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/italy.png)">Italy</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_italy_autogen.msi">Italy Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Italy. 352mb.</div>
+                    </div>
+                </div>
+
 	            <div id="nl" class="selectableArea">
                     <div class="areaTitle" style="background-image: url(resources/nl.png)">Netherlands</div>
                     <div class="areaDownload">
                         <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10731/fs_netherlands_autogen.msi">Netherlands Autogen Supplement - July, 2016</a>
                         <div class="areaDownloadSubTitle">for MegaSceneryEarth Netherlands. 53mb.</div>
+                    </div>
+                </div>
+
+	            <div id="ch" class="selectableArea">
+                    <div class="areaTitle" style="background-image: url(resources/switzerland.png)">Switzerland</div>
+                    <div class="areaDownload">
+                        <a class="areaDownloadTitle" href="https://endpoint915528.azureedge.net/freshscenery/10813/fs_switzerland_autogen.msi">Switzerland Autogen Supplement - July, 2016</a>
+                        <div class="areaDownloadSubTitle">for MegaSceneryEarth Switzerland. 77mb.</div>
                     </div>
                 </div>
 
